// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="sc-jverBc dQPSIH"
>
  <input
    className="sc-YbHMG ectjIx"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jVUQqh dyHWAi"
  >
    <span
      className="sc-dcrfrI duSven"
    >
      <div
        checked={false}
        className="sc-hRFsLf dUsgHU"
      />
    </span>
    <p
      className="sc-hBYLEG ksPbCa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="sc-jverBc dQPSIH"
>
  <input
    checked={true}
    className="sc-YbHMG ectjIx"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jVUQqh dyHWAi"
  >
    <span
      className="sc-dcrfrI duSven"
    >
      <div
        checked={true}
        className="sc-hRFsLf klYzzF"
      />
    </span>
    <p
      className="sc-hBYLEG ksPbCa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="sc-jverBc dQPSIH"
>
  <input
    className="sc-YbHMG ectjIx"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jVUQqh dyHWAi"
  >
    <span
      className="sc-dcrfrI duSven"
    >
      <div
        checked={false}
        className="sc-hRFsLf dUsgHU"
      />
    </span>
    <p
      className="sc-hBYLEG ksPbCa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="sc-jverBc dQPSIH"
>
  <input
    className="sc-YbHMG ectjIx"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jVUQqh dyHWAi"
  >
    <span
      className="sc-dcrfrI duSven"
    >
      <div
        checked={false}
        className="sc-hRFsLf dUsgHU"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Reverse direction 1`] = `
<label
  className="sc-jverBc dQPSIH"
>
  <input
    className="sc-YbHMG ectjIx"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="sc-jVUQqh dyHWAi"
  >
    <p
      className="sc-hBYLEG ksPbCa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
    <span
      className="sc-dcrfrI duSven"
    >
      <div
        checked={false}
        className="sc-hRFsLf dUsgHU"
      />
    </span>
  </div>
</label>
`;
